Parameters fetch in redux

--- a/Frontend/src/components/Partials/Filters/styles.scss
+++ b/Frontend/src/components/Partials/Filters/styles.scss
@@ -13,6 +13,7 @@
     @media (max-width: $desktop) {
         display: none;
     }
+    z-index: 1;
 
     &--hidden {
         animation-name: hideFilters;
