--- a/Frontend/src/pages/Admin/NewOffer/styles.scss
+++ b/Frontend/src/pages/Admin/NewOffer/styles.scss
@@ -1,4 +1,4 @@
-@import "../../stylesheets/variables.scss";
+@import "../../../stylesheets/variables.scss";
 
 .NewOffer {
     background: $dark-grey;
