--- a/Frontend/src/stylesheets/App.scss
+++ b/Frontend/src/stylesheets/App.scss
@@ -41,8 +41,8 @@ a {
 }
 
 @import "../pages/Error404/styles.scss";
-@import "../pages/NewOffer/styles.scss";
 @import "../pages/Offer/styles.scss";
+@import "../pages/Admin/NewOffer/styles.scss";
 
 @import "../components/Modals/styles.scss";
 @import "../components/Modals/AddCar/styles.scss";
