Adding model feature addded to Admin

--- a/Frontend/src/components/Modals/styles.scss
+++ b/Frontend/src/components/Modals/styles.scss
@@ -3,7 +3,7 @@
 .Modal {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
